--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 			</li>
 		</ol>
 	<h3 class="display-4" id="NodeJS">NodeJS Reviews</h3>
+	
+	<div class="row">
 	<!-- Review template begins -->
 	<div class="card col-md-4 col-xs-12" style="width: 18rem;">
 	  <!-- Change source of image to your picture  -->
@@ -79,7 +81,7 @@
 	<!-- Review template ends. -->
 	<!-- Reviews can be added below. -->
 
-
+	</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
