Minor spelling error fix

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				Navigate to your branch using the <a href="https://git-scm.com/docs/git-checkout">git checkout</a> command in the command line.
 			</li>
 			<li>
-				In your branch, open the <em>index.html</em> file and use the provided sample review card as template and add a card sharing ypur experience with the NodeJS learning path on Progate. 
+				In your branch, open the <em>index.html</em> file and use the provided sample review card as template and add a card sharing your experience with the NodeJS learning path on Progate. 
 			</li>
 			<li>
 				Stage, commit and push your changes.
