Added user card for Aditya Oberai

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Progate Plus Reviews</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/22204dada8.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -83,6 +84,22 @@
 	</div>
 	<!-- Review template ends. -->
 	<!-- Reviews can be added below. -->
+	
+	<div class="card col-md-4 col-xs-12" style="width: 18rem;">
+		<img src="Assets/adityaoberai.jpeg" class="card-img-top" alt="Aditya-Oberai">
+		<div class="card-body">
+			<h5 class="card-title">
+				Aditya Oberai <a class="fa fa-linkedin" href="https://linkedin.com/in/adityaoberai1" target="_blank"></a> <a class="fa fa-twitter" href="https://twitter.com/adityaoberai1" target="_blank"></a> <a class="fa fa-instagram" href="https://instagram.com/adityaoberai1" target="_blank"></a> <a class="fa fa-medium" href="https://medium.com/@adityaoberai" target="_blank"></a> 
+			</h5>
+			<h6>
+				Mentor, Progate Mentorship Programme
+			</h6>
+			<p class="card-text">
+				I truly appreciate how the <a href="https://progate.com">Progate</a> platform focuses on ease of use for absolute beginners and ensures that learners practice their concepts before proceeding with their learning.
+			</p>
+		</div>
+	  </div>
+	
 
 	</div>
 	</div>
