Added User Card For Anant Kumar Pandey

--- a/index.html
+++ b/index.html
@@ -99,6 +99,21 @@
 			</p>
 		</div>
 	  </div>
+		
+	<div class="card col-md-4 col-xs-12" style="width: 18rem;">
+		<img src="Assets/TBF.png" class="card-img-top" alt="Anant-Kumar-Pandey">
+		<div class="card-body">
+			<h5 class="card-title">
+				Anant Kumar Pandey 
+			</h5>
+			<h6>
+				Member, Progate Plus Community
+			</h6>
+			<p class="card-text">
+				Web Development Path (Node.js) helped me learning HTML & CSS, JavaScript, SQL & Node.js to a great extent, thus adding them to my repertoire. I also thank the Progate Plus Community for quick and reliable assistance.
+			</p>
+		</div>
+	  </div>
 	
 
 	</div>
