Assistance added to review

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				Member, Progate Plus Community
 			</h6>
 			<p class="card-text">
-				Web Development Path (Node.js) helped me learning HTML & CSS, JavaScript, SQL & Node.js to a great extent, thus adding them to my repertoire. I also thank the Progate Plus Community for quick and reliable assistance.
+				Web Development Path (Node.js) helped me learning HTML & CSS, JavaScript, SQL & Node.js to a great extent, thus adding them to my repertoire. I also thank the Progate Plus Community for quick and reliable assistance. I too assisted the community members through my tutorial videos which was fun.
 			</p>
 		</div>
 	  </div>
