--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	  </div>
 		
 	<div class="card col-md-4 col-xs-12" style="width: 18rem;">
-		<img src="Assets/TBF.jpg" class="card-img-top" alt="Anant-Kumar-Pandey">
+		<img src="Assets/csveda.jpg" class="card-img-top" alt="Anant-Kumar-Pandey">
 		<div class="card-body">
 			<h5 class="card-title">
 				Anant Kumar Pandey 
