--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
 	
 	<div class="row">
 	<!-- Review template begins -->
-	<div class="card col-md-4 col-xs-12" style="width: 18rem;">
+<!-- 	<div class="card col-md-4 col-xs-12" style="width: 18rem;"> -->
 	  <!-- Change source of image to your picture  -->
-	  <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="card-img-top" alt="Image of person from unsplash.com">
-	  <div class="card-body">
+<!-- 	  <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="card-img-top" alt="Image of person from unsplash.com"> -->
+<!-- 	  <div class="card-body"> -->
 	  	<!-- Your name -->
-	    <h5 class="card-title">John Doe</h5>
+<!-- 	    <h5 class="card-title">John Doe</h5> -->
 	    <!-- Your review/experience -->
-	    <p class="card-text">This is a sample review template. You can copy the code for this card and use it to share your experiences and reviews.</p>
-	  </div>
-	</div>
+<!-- 	    <p class="card-text">This is a sample review template. You can copy the code for this card and use it to share your experiences and reviews.</p> -->
+<!-- 	  </div> -->
+<!-- 	</div> -->
 	<!-- Review template ends. -->
 	<!-- Reviews can be added below. -->
 	
